kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turboasya
  labels:
    app: turboasya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turboasya
  template:
    metadata:
      labels:
        app: turboasya
    spec:
      containers:
        - name: turboasya
          image: ghcr.io/siberianmh/turboasya:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 250m
              memory: 400Mi
          ports:
            - containerPort: 8080
