kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: turboasya
spec:
  selector:
    app: turboasya
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
