kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turboasya
  annotations:
    kubernetes.io/ingress.class: 'nginx'

spec:
  tls:
    - hosts:
        - '*.example.com'
      secretName: example.com-tls

  rules:
    - host: turboasya.example.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: turboasya
                port:
                  number: 8080
